After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 753939 - Connect to a remote location from Other Locations, click elsewhere - segfault
Connect to a remote location from Other Locations, click elsewhere - segfault
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Crashers
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-08-21 16:31 UTC by Allan Day
Modified: 2015-08-21 18:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gtkplacesview: match master to fix crashes (4.21 KB, patch)
2015-08-21 18:00 UTC, Carlos Soriano
committed Details | Review

Description Allan Day 2015-08-21 16:31:34 UTC
I get a segfault when I:

 * Click on an unmounted server in Other Locations
 * Then click on a different location in the sidebar

This is on master.

Backtrace:

Thread 6 (Thread 0x7fffd1ef7700 (LWP 7504))

  • #0 syscall
    from /lib64/libc.so.6
  • #1 g_cond_wait_until
    at gthread-posix.c line 1444
  • #2 g_async_queue_pop_intern_unlocked
    at gasyncqueue.c line 422
  • #3 g_async_queue_timeout_pop_unlocked
    at gasyncqueue.c line 570
  • #4 g_thread_pool_wait_for_new_task
    at gthreadpool.c line 262
  • #5 g_thread_pool_thread_proxy
    at gthreadpool.c line 296
  • #6 g_thread_proxy
    at gthread.c line 778
  • #7 start_thread
    from /lib64/libpthread.so.0
  • #8 clone
    from /lib64/libc.so.6

Thread 5 (Thread 0x7fffe0d5e700 (LWP 7506))

  • #0 syscall
    from /lib64/libc.so.6
  • #1 g_cond_wait_until
    at gthread-posix.c line 1444
  • #2 g_async_queue_pop_intern_unlocked
    at gasyncqueue.c line 422
  • #3 g_async_queue_timeout_pop_unlocked
    at gasyncqueue.c line 570
  • #4 g_thread_pool_wait_for_new_task
    at gthreadpool.c line 262
  • #5 g_thread_pool_thread_proxy
    at gthreadpool.c line 296
  • #6 g_thread_proxy
    at gthread.c line 778

Comment 1 Carlos Soriano 2015-08-21 16:56:00 UTC
Does it happens in gtk+ file chooser as well? Looks like some internal bug lower in the stack
Comment 2 Allan Day 2015-08-21 16:59:31 UTC
I did manage to get a segfault there too, but it didn't occur under the same circumstances.

  • #0 g_type_check_instance_cast
    at gtype.c line 4060
  • #1 volume_mount_ready_cb
    at gtkplacesview.c line 1237
  • #2 g_simple_async_result_complete
    at gsimpleasyncresult.c line 801
  • #3 complete_in_idle_cb
    at gsimpleasyncresult.c line 813
  • #4 g_main_dispatch
    at gmain.c line 3154
  • #5 g_main_context_dispatch
    at gmain.c line 3769
  • #6 g_main_context_iterate
    at gmain.c line 3840
  • #7 g_main_context_iteration
    at gmain.c line 3901
  • #8 g_application_run
    at gapplication.c line 2311
  • #9 main

Comment 3 Carlos Soriano 2015-08-21 18:00:32 UTC
Created attachment 309833 [details] [review]
gtkplacesview: match master to fix crashes

Just match gtkplacesview from master which has some fixes
for cancellables operations accesing the private struct when
cancelled, and therefore making it crash.
Comment 4 Carlos Soriano 2015-08-21 18:01:38 UTC
Feel free to report more issues, as said, it's expected we have
more due to the big changes (although this one was in gtk+)

Attachment 309833 [details] pushed as 18b9ca4 - gtkplacesview: match master to fix crashes