gtkplacesview: match master to fix crashes

Just match gtkplacesview from master which has some fixes
for cancellables operations accesing the private struct when
cancelled, and therefore making it crash.

https://bugzilla.gnome.org/show_bug.cgi?id=753939